[gd_scene load_steps=3 format=3 uid="uid://c1qgaxip6tbav"]

[ext_resource type="Script" path="res://langdocs/prog_54c.gd" id="1_kw0ty"]
[ext_resource type="Theme" uid="uid://bqv6tifw6myqj" path="res://largefront.tres" id="2_hf5r8"]

[node name="prog_54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kw0ty")

[node name="txt1" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 201.0
offset_right = 355.0
offset_bottom = 332.0
theme = ExtResource("2_hf5r8")
text = "Area"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txt2" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 345.0
offset_right = 358.0
offset_bottom = 476.0
theme = ExtResource("2_hf5r8")
text = "Circumference"
horizontal_alignment = 1
vertical_alignment = 1

[node name="rad" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 48.0
offset_right = 352.0
offset_bottom = 172.0
theme = ExtResource("2_hf5r8")
text = "3.712"
alignment = 1

[node name="BnCal" type="Button" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 38.0
offset_right = 1060.0
offset_bottom = 198.0
theme = ExtResource("2_hf5r8")
text = "Calulate"

[node name="BnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 230.0
offset_right = 1060.0
offset_bottom = 390.0
theme = ExtResource("2_hf5r8")
text = "Clear
"

[node name="BnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 412.0
offset_right = 1068.0
offset_bottom = 572.0
theme = ExtResource("2_hf5r8")
text = "Exit"

[connection signal="pressed" from="BnCal" to="." method="_on_bn_cal_pressed"]
[connection signal="pressed" from="BnClear" to="." method="_on_bn_clear_pressed"]
[connection signal="pressed" from="BnExit" to="." method="_on_bn_exit_pressed"]
